--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "0.9.x"
+    "react-redux": "^7.0.3",
+    "react-scripts": "0.9.x",
+    "redux": "^4.0.1"
   },
   "devDependencies": {},
   "scripts": {
