--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "a2",
-  "version": "0.1.0",
+  "name": "api",
+  "version": "0.0.0",
   "private": true,
-  "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
-    "react-scripts": "0.9.x",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
-  },
-  "devDependencies": {},
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "mongo": "^0.1.0",
+    "morgan": "~1.9.1"
   }
 }
