--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "process.env.PORT"
 
 }
