Change client proxy

--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "process.env.PORT"
+  "proxy": "https://basic-message-board.herokuapp.com/"
 
 }
